--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ huggingface_hub>=0.19.0
 runpod>=1.3.0
 together>=0.2.0
 replicate>=0.22.0
+hyperbolic>=2.0.0
 
 # Development dependencies
 pytest>=7.4.0
